--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,6 @@ html {
 body {
   background: #eee;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
-  padding: 0 16px;
 }
 
 header {
@@ -27,7 +26,6 @@ header h1 {
 }
 
 footer {
-  position: absolute;
   text-align: center;
   bottom: 0;
   width: 100%;
@@ -110,31 +108,35 @@ form.create-note button {
   margin: 0;
   padding: 0;
   font-weight: 300;
-}
+}*/
 
-body {
+.container body {
   font-family: "Source Sans Pro", sans-serif;
   color: white;
   font-weight: 300;
-  background: #50a3a2;
   width: 100%;
   height: 100%;
 }
 
 .container {
-  margin: 10% auto;
-  padding: 80px 0;
+  padding: 100px 100px;
   text-align: center;
+  background: #0bcac7;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container h1 {
   font-size: 40px;
   font-weight: 200;
+  color: #fff;
 }
 
-input {
+.container input {
   border: 1px solid rgba(252, 252, 252, 0.4);
-  background-color: rgba(252, 252, 252, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   width: 250px;
   border-radius: 3px;
   font-family: "Source Sans Pro", sans-serif;
@@ -143,18 +145,85 @@ input {
   display: block;
   text-align: center;
   font-size: 18px;
-  color: white;
+  color: rgba(233, 217, 217, 0.055);
   font-weight: 300;
 }
 
-button {
+.container button {
   appearance: none;
   outline: 0;
-  background-color: white;
+  background-color: rgba(128, 218, 230, 0.781);
   border: 0;
   padding: 10px 15px;
-  color: #50a3a2;
+  color: #5ff3f1;
   border-radius: 3px;
   width: 250px;
   font-size: 18px;
-} */
+}
+.container .login_form {
+  max-width: 400px;
+  width: 100%;
+  padding: 50px 25px;
+  background-image: linear-gradient(45deg, #fff, #fff3);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  border: 2px outset #fff;
+  position: center;
+  box-shadow: 0 2px 6px #0002, 0 5px 16px #0005;
+}
+.container .login_form .group {
+  position: relative;
+  margin-top: 30px;
+}
+.container .login_form .group input {
+  background-color: #0002;
+  border-radius: 4px;
+  padding: 6px 25px 6px 10px;
+  display: block;
+  width: 100%;
+  box-shadow: -1px 1px 2px #0002 inset;
+  color: #fff;
+  font-size: 16px;
+  border: 1px outset #fff5;
+  transition: border-radius 0.3s;
+}
+
+.container .login_form .group input:valid + label,
+.container .login_form .group input:focus + label {
+  top: -14px;
+  left: 0;
+  color: #fff;
+  font-size: 12px;
+}
+
+.container .login_form .group .icon {
+  position: center;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fffe;
+  text-shadow: 0 0 1px #0007;
+}
+
+.container .login_form button {
+  border: 2px outset #ffffff78;
+  display: inline-block;
+  background: linear-gradient(45deg, #ffffff05, #ffffff61);
+  padding: 8px 25px;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  box-shadow: 0 0 0 4px #fff2;
+  margin: 20px 0;
+  cursor: pointer;
+  transition-property: transform;
+  transition: 0.3s ease-in-out;
+}
+
+.container .login_form button:hover {
+  background: linear-gradient(-45deg, #ffffff05, #ffffff61);
+}
+
+.container .login_form button:active {
+  transform: scale(0.95);
+}
